convert to hex code genarator

--- a/01-change-bg-color/index.html
+++ b/01-change-bg-color/index.html
@@ -11,6 +11,7 @@
 	<body>
 		<div class="container" id="root">
 			<h1>Change The Background Color By Clicking Following Button</h1>
+			<input type="text" disabled value="#000000" id="output" />
 			<button id="btn-change">Change Color</button>
 		</div>
 	</body>
