--- a/01-change-bg-color/index.html
+++ b/01-change-bg-color/index.html
@@ -12,7 +12,7 @@
 		<div class="container" id="root">
 			<h1>Change The Background Color By Clicking Following Button</h1>
 			<div class="input-group">
-				<input type="text" disabled value="#000000" id="output" />
+				<input type="text" value="#000000" id="output" />
 				<button class="btn-copy" id="btn-copy" title="copy to clipboard">
 					Copy
 				</button>
