feat: convert hex code to decimal

--- a/20-color-picker/index.html
+++ b/20-color-picker/index.html
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Change Background Color</title>
 		<link rel="stylesheet" href="style.css" />
-		<!-- <script src="app.js" defer></script> -->
+		<script src="app.js" defer></script>
 	</head>
 	<body>
 		<div class="container">
@@ -14,7 +14,7 @@
 			<section class="section">
 				<div class="section-header">
 					<h3 class="section-title">Display Color</h3>
-					<button class="section-header-action" id="generate-random-color">
+					<button class="section-header-action" id="btn-generate-random-color">
 						Random Color
 					</button>
 				</div>
@@ -50,7 +50,6 @@
 								name="color-mode"
 								id="color-mode-rgb"
 								value="rgb"
-								checked
 							/>
 							<label for="color-mode-rgb">RGB</label>
 						</div>
