--- a/20-color-picker/index.html
+++ b/20-color-picker/index.html
@@ -125,6 +125,15 @@
 					</div>
 				</div>
 			</section>
+
+			<!-- Color Presets -->
+			<section class="section">
+				<div class="section-header">
+					<h3 class="section-title">Preset Colors</h3>
+				</div>
+				<div class="divider"></div>
+				<div class="preset-colors" id="preset-colors"></div>
+			</section>
 		</div>
 	</body>
 </html>
