--- a/20-color-picker/index.html
+++ b/20-color-picker/index.html
@@ -174,9 +174,58 @@
 							</button>
 						</div>
 					</div>
-					<!-- <div class="background-right-panel">
-						<h1>Hello</h1>
-					</div> -->
+					<div class="background-right-panel">
+						<div id="bg-controller">
+							<div class="select-group">
+								<label class="lead" for="bg-size">Background Size</label>
+								<select class="text-input" name="bg-size" id="bg-size">
+									<option value="auto">Auto</option>
+									<option value="inherit">Inherit</option>
+									<option value="contain">Contain</option>
+									<option value="cover">cover</option>
+								</select>
+							</div>
+							<div class="select-group">
+								<label class="lead" for="bg-repeat">Background Repeat</label>
+								<select class="text-input" name="bg-repeat" id="bg-repeat">
+									<option value="repeat">Repeat</option>
+									<option value="no-repeat">No Repeat</option>
+								</select>
+							</div>
+							<div class="select-group">
+								<label class="lead" for="bg-position"
+									>Background Position</label
+								>
+								<select class="text-input" name="bg-position" id="bg-position">
+									<option value="left top">Left Top</option>
+									<option value="left center">Left Center</option>
+									<option value="left bottom">Left Bottom</option>
+									<option value="right top">Right Top</option>
+									<option value="right center">Right Center</option>
+									<option value="right bottom">Right Bottom</option>
+									<option value="center top">Center Top</option>
+									<option value="center center">Center Center</option>
+									<option value="center bottom">Center Bottom</option>
+								</select>
+							</div>
+							<div class="select-group">
+								<label class="lead" for="bg-attachment"
+									>Background Attachment</label
+								>
+								<select
+									class="text-input"
+									name="bg-attachment"
+									id="bg-attachment"
+								>
+									<option value="initial">Initial</option>
+									<option value="scroll">Scroll</option>
+									<option value="fixed">Fixed</option>
+									<option value="local">Local</option>
+									<option value="inherit">Inherit</option>
+								</select>
+							</div>
+						</div>
+					</div>
 				</div>
 			</section>
 		</div>
