Feat: add day and date

--- a/04-digital-clock/index.html
+++ b/04-digital-clock/index.html
@@ -28,6 +28,11 @@
 				></span>
 				<span id="am-pm"></span>
 			</div>
+
+			<div class="date-sec d-flex align-items-center justify-content-between">
+				<div id="day"></div>
+				<div><span id="month"></span>,<span id="date"></span></div>
+			</div>
 		</div>
 		<!-- Bootstrap JavaScript Libraries -->
 		<script
